syntax = "proto3";

option go_package = "gitlab.com/rarify-protocol/tss-svc/pkg/types";

enum RequestType {
  Proposal = 0;
  Acceptance = 1;
  Sign = 2;
  Reshare = 3;
  Keygen = 4;
}

message ProposalRequest {
  uint64 session = 1;
  // List of operation ids
  repeated string indexes = 2;
  // Merkle tree based on operations root hash in hex
  string root = 3;
}

message AcceptanceRequest {
  // Merkle tree based on operations root hash in hex
  string root = 1;
}

message SignRequest {
  string root = 1;
  // TODO
}

message ReshareRequest {
  // TODO
}

message KeygenRequest {
  // TODO
}